--- a/public/app/components/login/login.template.html
+++ b/public/app/components/login/login.template.html
@@ -12,13 +12,13 @@
 						<div class="row">
 							<div class="col-md-12">
 								<form class="form-horizontal" role="form">
-									<div class="form-group">
+									<div class="form-group" >
 										 
 										<label for="inputEmail3" class="col-sm-2 control-label">
 											Username
 										</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" id="inputEmail3" ng-model="username"/>
+											<input type="text" class="form-control" id="inputEmail3" ng-model="$ctrl.username"/>
 										</div>
 									</div>
 									<div class="form-group">
@@ -27,7 +27,7 @@
 											Password
 										</label>
 										<div class="col-sm-10">
-											<input type="password" class="form-control" id="inputPassword3" ng-model="password"/>
+											<input type="password" class="form-control" id="inputPassword3" ng-model="$ctrl.password"/>
 										</div>
 									</div>
 									<div class="form-group">
@@ -43,7 +43,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											 
-											<button type="submit" class="btn btn-default">
+											<button type="submit" class="btn btn-default" ng-click = "$ctrl.authenticate()">
 												Sign in
 											</button>
 										</div>
