--- a/public/app/components/header/header.template.html
+++ b/public/app/components/header/header.template.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-      <div class = "row">
+      
         <div class="col-md-3">
           <button type="button" class="navbar-toggle collapsed"
             data-toggle="collapse" data-target="navbar">
@@ -15,11 +15,18 @@
           </a>
         </div>
         <div class="col-md-9">
+        <div class = "row">
         <h1>
            <div class="pull-right">UML Parser Grader Login</div>
         </h1>
         </div>
+        <div class = "row">
+        <h1>
+           <div class="pull-right" ng-show="false">Grading for {{$ctrl.tenantName}}</div>
+        </h1>
         </div>
+        </div>
+       
       </div>
       </div>
   </nav>
