Parsing the zip file

--- a/public/app/components/grade/grade.template.html
+++ b/public/app/components/grade/grade.template.html
@@ -18,7 +18,7 @@
       <span ng-show="zipFile.result">Upload Successful</span>
       <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
       <button ng-show="zipFile.result" 
-              ng-click="parse()">Upload</button>
+              ng-click="parse()">Parse</button>
     </fieldset>
     <br>
   </form>
