--- a/public/app/components/login/login.template.html
+++ b/public/app/components/login/login.template.html
@@ -43,7 +43,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											 
-											<button type="submit" class="btn btn-default" ng-click = "$ctrl.authenticate()">
+											<button type="submit" class="btn btn-default" ng-click = "$ctrl.authenticate()" ng-disabled="!($ctrl.username && $ctrl.password)">
 												Sign in
 											</button>
 										</div>
